--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -19,4 +19,4 @@ toc: false
   </div>
 </div>
 
-{% include file-viewer.html files=site.data.codes.personal.files %}
+{% include file-viewer.html files=site.data.codes.personal.files name="personal" %}
