--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,9 +69,9 @@
   {% endunless %}
 
   <!-- Bootstrap -->
-  {% unless jekyll.environment == 'production' %}
+  {% comment %} {% unless jekyll.environment == 'production' %}
+  {% endunless %} {% endcomment %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
-  {% endunless %}
 
   <!-- Theme style -->
   <link rel="stylesheet" href="{{ '/assets/css/:THEME.css' | replace: ':THEME', site.theme | relative_url }}">
