--- a/_includes/sql-editor.html
+++ b/_includes/sql-editor.html
@@ -1,6 +1,6 @@
 <div style="display:flex; flex-direction:column; gap:0;">
 
-  <div id="category-buttons" class="d-flex gap-1 flex-column flex-md-row">
+  <div id="category-buttons" class="d-flex gap-1 flex-column flex-md-row flex-lg-row">
     <button class="filter-btn" data-category="Frontend">Frontend</button>
     <button class="filter-btn" data-category="Backend">Backend</button>
     <button class="filter-btn" data-category="Bases de Datos">Bases de datos</button>
