--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@ layout: default
 toc: false
 ---
 
-<div class="bkm-sql-banner container rounded-3 my-4 py-4 px-3 px-sm-0">
+<div class="my-4 py-4">
   <h1 data-toc-skip class="text-center mb-4" style="color: var(--heading-color-title);">
     Explora mis skills
   </h1>
@@ -19,4 +19,9 @@ toc: false
   </div>
 </div>
 
+<p class="mb-3 small mb-md-4 text-center fs-5">
+  Revisa mis apuntes sobre lo que hago. No son artículos, son simples notas. Aquí puedes ver cómo pienso.
+</p>
+
 {% include file-viewer.html files=site.data.codes.personal.files name="personal" %}
+
