--- a/_sass/components/_diagram.scss
+++ b/_sass/components/_diagram.scss
@@ -48,8 +48,10 @@
     transform: rotate(45deg);
     display: flex;
     align-items: center;
-    background-color: var(--main-bg);
+    background-color: var(--main-border-color);
+    z-index: 2;
     justify-content: center;
+    overflow: hidden;
     font-weight: bold;
     border: 2px solid var(--text-color);
     text-align: center;
@@ -65,4 +67,5 @@
   background-color: var(--text-color);
   display: inline-block;
   padding: 0;
+  z-index: -1;
 }
