--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -85,7 +85,8 @@
   --prompt-tip-bg: rgba(36, 50, 42, 0.64);
   --prompt-tip-border: rgb(15, 164, 15, 0.81);
   --prompt-tip-icon-color: rgb(15, 164, 15, 0.81);
-  --prompt-info-bg: rgb(7, 59, 104, 0.8);
+  --prompt-info-border: rgb(7, 59, 104, 1);
+  --prompt-info-bg: rgb(7, 59, 104, 0.35);
   --prompt-info-icon-color: #0075d1;
   --prompt-warning-bg: rgb(90, 69, 3, 0.88);
   --prompt-warning-icon-color: rgb(255, 165, 0, 0.8);
